# stockdata-hub

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  _list_probe.py  pyproject.toml
.github/workflows/: publish.yml
docs/: add_provider.md  daily_kline_api.md  data_sources.md  intraday_api.md  intraday_design.md  intraday_requirements.md
examples/: intraday_example.py
src/stockdata_hub/: __init__.py  cache.py  code_utils.py  core.py  fetcher.py  mootdx_client.py  name_provider.py  normalization.py  rate_limit.py
src/stockdata_hub/providers/: __init__.py  akshare_provider.py  eastmoney_minute_provider.py  fast_tencent_provider.py  http_provider.py  itick_provider.py  mootdx_minute_provider.py  mootdx_provider.py  openstockdata_minute_provider.py  openstockdata_provider.py  sina_minute_provider.py  tushare_provider.py
tests/: test_cache.py  test_code_utils.py  test_core.py  test_intraday.py  test_normalization.py
